# midi-receiver

./: .gitignore  LICENSE  README.md
.github/: FUNDING.yml
src/: CMakeLists.txt  ExampleReceiver.cpp  ExampleReceiver.h  main.cpp
src/midi/: MidiDevice.cpp  MidiDevice.h  MidiIn.cpp
src/rlmidi/: IMidiInputListener.h  MidiIn.cpp  MidiIn.h
